--- a/styles/style.css
+++ b/styles/style.css
@@ -102,10 +102,62 @@ blockquote {
 
 .intro {
     padding: 30px 20px 38px;
+    /* gap: 24px; */
+}
+
+.intro__heading {
+    display: flex;
+    justify-content: space-between;
+    color: #ccc;
+    margin-bottom: 24px;
+}
+
+.intro__title {
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+}
+
+.intro__date {
+    white-space: nowrap;
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+.intro__main-text {
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 .reasons {
     padding: 40px 20px;
+    gap: 32px;
+}
+
+.content-section__subtitle {
+    
+}
+
+.content-section__introduction {
+    font-size: 20px;
+    margin: 32px 0;
+    line-height: 1.35;
+}
+
+.content-section__list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 0 0 0 16px;
+    font-size: 16px;
+    line-height: 1.35;
+}
+
+
+.content-section__list-accent {
+    font-weight: 700;
 }
 
 .how-to {
